update setup chunks

--- a/notes/2.1-inputs.Rmd
+++ b/notes/2.1-inputs.Rmd
@@ -11,6 +11,9 @@ library(tidyverse)
 server <- function(input, output, session) {
 
 }
+if (requireNamespace('rstudioapi', quietly = TRUE)){
+  options(shiny.launch.browser = rstudioapi::viewer)
+}
 ```
 
 ## Shiny 101
