--- a/notes/2.3-layouts.Rmd
+++ b/notes/2.3-layouts.Rmd
@@ -3,10 +3,16 @@ title: Layouts & Themes
 ---
 
 ```{r setup, include = FALSE}
+# Load shiny
 library(shiny)
+# Load tidyverse
 library(tidyverse)
-server <- function(input, output, session){
-  
+# Define empty server functi
+server <- function(input, output, session) {
+
+}
+if (requireNamespace('rstudioapi', quietly = TRUE)){
+  options(shiny.launch.browser = rstudioapi::viewer)
 }
 ```
 
