--- a/notes/3.1-moma.Rmd
+++ b/notes/3.1-moma.Rmd
@@ -17,21 +17,30 @@ if (requireNamespace('rstudioapi', quietly = TRUE)){
 ```
 
 
-## Artists
+## Artworks
 
 ```{r}
-artists <- readr::read_csv('../data/Artists.csv') %>% 
+artworks <- readr::read_csv('../data/Artworks.csv') %>% 
   janitor::clean_names()
-artists
+artworks
 ```
 
+### Artworks Acquired by Date Range and Classification
 
 ```{r}
-artworks %>% 
+artworks_subset <- artworks %>% 
  filter(!is.na(artist)) %>% 
  filter(date_acquired >= '2010-01-01') %>% 
  filter(date_acquired <= '2020-01-01') %>% 
- filter(classification == 'Paintings') %>% 
+ filter(classification == 'Painting')
+
+artworks_subset
+```
+
+### Top 10 Artists by Classification
+
+```{r}
+artworks_subset %>% 
  count(artist, sort = TRUE) %>%
  mutate(artist = forcats::fct_reorder(artist, n)) %>% 
  head(10) %>% 
@@ -40,62 +49,27 @@ artworks %>%
  coord_flip()  
 ```
 
-```{r}
-artists %>% 
-  filter(nationality == )
-```
-
-## Artworks
+### Distribution of Heights and Widths by Classification
 
 ```{r}
-artworks <- readr::read_csv('data/Artworks.csv') %>% 
-  janitor::clean_names()
-artworks
-```
-
-```{r}
-ui <- fluidPage(
-  sidebarLayout(
-    sidebarPanel(
-      selectInput('classification', 'Classification', unique(artworks$classification)),
-      dateRangeInput(
-        'date', 
-        'Date', 
-        start = min(artworks$date_acquired, na.rm = TRUE),
-        end = max(artworks$date_acquired, na.rm = TRUE)
-      )
-    ),
-    mainPanel(
-      plotOutput('plot')
-    )
+artworks_subset %>% 
+  ggplot(aes(x = width_cm, y = height_cm)) +
+  geom_point(alpha = 0.5) +
+  labs(
+    x = 'Width',
+    y = 'Height'
   )
-)
-
-server <- function(input, output, session){
-  output$plot <- renderPlot({
-    artworks %>% 
-      filter(!is.na(artist)) %>% 
-      filter(date_acquired >= !!input$date[1]) %>% 
-      filter(date_acquired <= !!input$date[2]) %>% 
-      filter(classification == !!input$classification) %>% 
-      count(artist, sort = TRUE) %>%
-      mutate(artist = forcats::fct_reorder(artist, n)) %>% 
-      head(10) %>% 
-      ggplot(aes(x = artist, y = n)) +
-      geom_col() +
-      coord_flip()    
-  })
-
-}
-shinyApp(ui, server)
 ```
-## Heights a
-
+### Distribution of Heights and Widths by Classification: Rectangle Plot
 
 ```{r}
-artworks %>% 
-  ggplot(aes(x = width_cm)) +
-  geom_histogram() +
-  scale_x_log10()
+artworks_subset %>% 
+  ggplot(aes(xmin = 0, ymin = 0, xmax = width_cm, ymax = height_cm)) +
+  geom_rect(alpha = 0.5) +
+  labs(
+    title = 'Distribution of Width vs. Height',
+    subtitle = 'Classification: Painting',
+    x = 'Width',
+    y = 'Height'
+  )
 ```
-
